--- a/site/sass/components/_hero-article.scss
+++ b/site/sass/components/_hero-article.scss
@@ -1,48 +1,49 @@
 // Styles for the hero, copy and images stacked on mobile, side by side on large.
 @use 'sass:math';
 
-.hero {
+.hero-article {
   $content-max-width: 100rem;
 
   overflow: hidden;
   position: relative;
   width: 100%;
 
+  &__back {
+    background-color: var(--white);
+    margin: 0 auto;
+    max-width: $content-max-width;
+    padding-bottom: clamp(1rem, 6vw, 2.5rem);
+    padding-top: clamp(1rem, 6vw, 2rem);
+
+    @include mq(750px) {
+      background-color: transparent;
+      padding-bottom: 0;
+    }
+  }
+
   &__content {
     margin: 0 auto;
     max-width: $content-max-width;
-    padding: clamp(2rem, 6vw, 3rem) 0;
+    padding: 2.5rem 0 clamp(3rem, 6vw, 4.5rem);
     position: relative;
   }
 
   &__images {
     align-items: center;
     display: flex;
+    height: 30vh;
     justify-content: center;
+    margin-top: -20vh;
     position: relative;
 
     @include mq(750px) {
       bottom: 0;
       height: 100%;
+      margin-top: unset;
       position: absolute;
       right: 0;
-      width: 50vw;
+      width: 58vw;
       z-index: 0;
-    }
-
-    &--image {
-      height: 20vh;
-      position: absolute;
-      right: -3rem;
-      width: auto;
-      z-index: 2;
-
-      @include mq(750px) {
-        object-fit: contain;
-        position: relative;
-        right: unset;
-        width: 30vw;
-      }
     }
 
     &--background-pattern {
@@ -59,7 +60,7 @@
   }
 
   &__content-wrapper {
-    max-width: clamp(40ch, 50vw, 60ch);
+    max-width: clamp(35ch, 50vw, 70ch);
   }
 
   &__icon {
@@ -73,7 +74,7 @@
   }
 
   &__title {
-    margin: 1rem 0;
+    margin-top: 1rem;
   }
 
   &__link {
