--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -35,6 +35,7 @@
 @import 'components/pre';
 @import 'components/body';
 @import 'components/cta';
+@import 'components/bg-pattern';
 @import 'components/switch';
 @import 'components/card';
 @import 'components/back-to-top';
@@ -64,6 +65,7 @@
 @import 'components/image-card';
 @import 'components/card-subnav';
 @import 'components/hero';
+@import 'components/hero-article';
 @import 'components/call-out';
 @import 'components/external-community';
 @import 'components/cookie-disclaimer';
