🆕(site) Hero Animated Updates (#368)
* hero styling and animation updates

* update docs, integrate CTA

* move transform scale to single row layout

* add motion fallback

* phosphor integration

* remove delay, useTheme parameter, normalize event name

Co-authored-by: Sam Richard <snugug@google.com>

--- a/site/sass/components/_wrapper.scss
+++ b/site/sass/components/_wrapper.scss
@@ -200,6 +200,10 @@
       background-color: var(--grey-850);
     }
 
+    &--blue {
+      background-color: var(--secondary-blue);
+    }
+
     &--color-stop {
       background: var(--secondary-blue);
       position: relative;
@@ -257,5 +261,10 @@
     --shape-color: var(--blue-600), var(--yellow-500);
     background-image: paint(circles);
     height: 100%;
+  }
+
+  &--bottom-bleed {
+    position: relative;
+    z-index: 1;
   }
 }
