--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -36,6 +36,8 @@ hideNewsletter: true
   <div id="home__articles" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.posts.title, landingCollections.homePosts, l10n.home.posts.modifiers, l10n.locale.code) }}</div>
   {% endif %}
 
+  <div id="home__educators" class="wrapper wrapper--padded wrapper--padding">{{ fiftyFifty(l10n.home.educators.content, l10n.home.educators.cta, l10n.home.educators.images, l10n.locale.code, l10n.home.educators.modifiers) }}</div>
+
   <!-- Developers -->
   <div id="home__developers" class="wrapper wrapper--padding wrapper--padded">{{ communityQuotes(l10n.home.developers.content, l10n.home.developers.quotes) }}</div>
 
