--- a/site/sass/components/_body.phosphor.scss
+++ b/site/sass/components/_body.phosphor.scss
@@ -1,15 +1,8 @@
 // Styles for the main sections
-body,
-html {
-  height: 100%;
-  scroll-behavior: smooth;
-}
-
-body {
+/* stylelint-disable selector-no-qualifying-type */
+body[data-theme='phosphor'] {
   animation: blur 30ms infinite, flick 30ms infinite, jump 30ms infinite;
   background-color: var(--grey-50);
-  display: flex;
-  flex-direction: column;
 
   &::before {
     animation: vhs 20s ease-in-out infinite, scanlines 0.2s ease-in-out alternate infinite;
@@ -28,9 +21,7 @@ body {
   }
 }
 
-.main {
-  flex: 1 0 auto;
-  height: max-content;
+[data-theme='phosphor'] .main {
   margin-top: 4rem;
 }
 
