--- a/site/sass/components/_wrapper.phosphor.scss
+++ b/site/sass/components/_wrapper.phosphor.scss
@@ -12,6 +12,10 @@
       background-color: var(--grey-50);
     }
 
+    &--blue {
+      background-color: var(--grey-50);
+    }
+
     &--color-stop {
       background: var(--grey-50);
 
