--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -119,5 +119,6 @@
   @import 'components/nav.phosphor';
   @import 'components/subnav.phosphor';
   @import 'components/typography.phosphor';
+  @import 'components/hero-animated.phosphor';
 }
 /* stylelint-enable no-invalid-position-at-import-rule */
