--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -35,7 +35,7 @@
 @import 'components/pre';
 @import 'components/body';
 @import 'components/cta';
-@import 'components/bg-pattern';
+@import 'components/background-color';
 @import 'components/switch';
 @import 'components/card';
 @import 'components/back-to-top';
