--- a/site/_layouts/article.njk
+++ b/site/_layouts/article.njk
@@ -5,13 +5,12 @@ layout: _wrapper
 {% from 'skip-link.njk' import skipLink %} {% from 'app-info.njk' import appInfo %} {% from 'article-footer.njk' import articleFooter %} {% from 'authors-list.njk' import authorsList %} {% from 'back-to-top.njk' import backToTop %} {% from 'item-grid.njk' import itemGrid %} {% from 'date-time.njk' import dateTime %} {% from 'toc.njk' import toc as tableOfContents %} {% from 'hero-article.njk' import heroArticle %}
 
 <article class="article">
-  <div class="article__hero">
-    {{skipLink(microcopy.skip.content, 'article')}} {% if section == 'posts' %} {{ heroArticle(locale, parent, microcopy, tags[0], title) }} {% elif section == 'case-studies' %}
-    <p>test</p>
-    {% endif %}
+  <div class="article__hero">{{skipLink(microcopy.skip.content, 'article')}} {% if section == 'posts' %} {{ heroArticle(section, locale, parent, microcopy, tags[0], title) }} {% elif section == 'case-studies' %} {{ heroArticle(section, locale, parent, microcopy, tags[0], title, app) }} {% endif %}</div>
+  {% if section == 'case-studies' %}
+  <div class="wrapper--padded wrapper--full-bleed article__hero-image-wrapper">
+    <img class="article__hero-image" src="{{hero.image}}" alt="{{hero.alt}}" />
   </div>
-
-  {% if content | toc or authors %}
+  {% endif %} {% if content | toc or authors %}
   <aside class="wrapper--padded article__toc">
     {% if section == 'posts' %}
     <section class="article__section">{{ authorsList(microcopy.posted, authors, contributors, microcopy) }}</section>
