--- a/site/_layouts/article.njk
+++ b/site/_layouts/article.njk
@@ -2,7 +2,7 @@
 layout: _wrapper
 ---
 
-{% from 'skip-link.njk' import skipLink %} {% from 'app-info.njk' import appInfo %} {% from 'article-footer.njk' import articleFooter %} {% from 'authors-list.njk' import authorsList %} {% from 'back-to-top.njk' import backToTop %} {% from 'item-grid.njk' import itemGrid %} {% from 'date-time.njk' import dateTime %} {% from 'toc.njk' import toc as tableOfContents %} {% from 'hero-article.njk' import heroArticle %}
+{% from 'skip-link.njk' import skipLink %} {% from 'article-footer.njk' import articleFooter %} {% from 'authors-list.njk' import authorsList %} {% from 'back-to-top.njk' import backToTop %} {% from 'item-grid.njk' import itemGrid %} {% from 'date-time.njk' import dateTime %} {% from 'toc.njk' import toc as tableOfContents %} {% from 'hero-article.njk' import heroArticle %}
 
 <article class="article">
   <div class="article__hero">{{skipLink(microcopy.skip.content, 'article')}} {% if section == 'posts' %} {{ heroArticle(section, locale, parent, microcopy, tags[0], title) }} {% elif section == 'case-studies' %} {{ heroArticle(section, locale, parent, microcopy, tags[0], title, app) }} {% endif %}</div>
@@ -15,8 +15,6 @@ layout: _wrapper
     {% if section == 'posts' %}
     <section class="article__section">{{ authorsList(microcopy.posted, authors, contributors, microcopy) }}</section>
     <section class="article__section">{{ dateTime(microcopy.datePosted, page.date, locale.code, options={ year: 'numeric', month: 'long', day: 'numeric' }) }}</section>
-    {% elif section == 'case-studies' %}
-    <section class="article__section">{{ appInfo(app) }}</section>
     {% endif %} {{ tableOfContents(content, microcopy.toc.title, {title: microcopy.skip.toc, id: 'article'}) }}
   </aside>
   {% endif %} {% set topics = { label: microcopy.topics, items: tags } %}{% if section == 'case-studies' %}{% set updated = { label: microcopy.lastUpdated, date: page.date, locale: locale.code } %} {% endif %}
@@ -24,7 +22,6 @@ layout: _wrapper
     <div class="article__content type">{{ content | safe }}</div>
     {{ articleFooter(locale.code,topics, updated, modifiers={custom:'article__content'}) }}
   </section>
-
-  <section class="article__recommended wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__contained wrapper__background">{{itemGrid(microcopy.recommended, title | related(locale.code, page.url))}}</section>
 </article>
+<section class="article__recommended wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__contained wrapper__background">{{itemGrid(microcopy.recommended, title | related(locale.code, page.url))}}</section>
 {{ backToTop() }}
