--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -120,5 +120,7 @@
   @import 'components/subnav.phosphor';
   @import 'components/typography.phosphor';
   @import 'components/hero-animated.phosphor';
+  @import 'components/banner-interstitial.phosphor';
+  @import 'components/card-study.phosphor';
 }
 /* stylelint-enable no-invalid-position-at-import-rule */
