--- a/site/_generated/news.njk
+++ b/site/_generated/news.njk
@@ -14,7 +14,7 @@ metadesc: Get the latest news, stories, resource articles, and case studies for 
 <div class="wrapper--hidden-x">
   <!-- Featured Post -->
   {% if landingCollections.featured.post %}
-  <div class="wrapper wrapper--padded" aria-label="{{l10n.news.hero.desc}}">{{ hero(landingCollections.featured.post) }}</div>
+  <div class="wrapper--full-bleed">{{ hero(landingCollections.featured.post) }}</div>
   {% endif %}
 
   <!-- Posts -->
