--- a/site/sass/themes/phosphor/components/_type.scss
+++ b/site/sass/themes/phosphor/components/_type.scss
@@ -1,6 +1,6 @@
-@use 'sass:math';
+.type {
+  font-family: $font-mono;
 
-[data-theme='phosphor'] %type {
   &--header {
     color: var(--black);
   }
