--- a/site/sass/themes/phosphor/globals/_colors.scss
+++ b/site/sass/themes/phosphor/globals/_colors.scss
@@ -1,10 +1,11 @@
-$phosphor-green: '#33FF00';
+$phosphor-green: #33ff00;
+$phosphor-gray: #202124;
 
 $phosphor-colors: (
   'blue-850': $phosphor-green,
   'blue-800': $phosphor-green,
   'blue-700': $phosphor-green,
-  'blue-650': $phosphor-green,
+  'blue-650': #1a7236,
   'blue-600': $phosphor-green,
   'blue-500': $phosphor-green,
   'blue-400': $phosphor-green,
@@ -18,7 +19,7 @@ $phosphor-colors: (
   'red-800': $phosphor-green,
   'red-750': $phosphor-green,
   'red-700': $phosphor-green,
-  'red-650': $phosphor-green,
+  'red-650': #80db7a,
   'red-600': $phosphor-green,
   'red-500': $phosphor-green,
   'red-400': $phosphor-green,
@@ -33,7 +34,7 @@ $phosphor-colors: (
   'yellow-700': $phosphor-green,
   'yellow-600': $phosphor-green,
   'yellow-500': $phosphor-green,
-  'yellow-450': $phosphor-green,
+  'yellow-450': #4bad4b,
   'yellow-400': $phosphor-green,
   'yellow-300': $phosphor-green,
   'yellow-250': $phosphor-green,
@@ -60,15 +61,15 @@ $phosphor-colors: (
   'grey-750': $phosphor-green,
   'grey-700': $phosphor-green,
   'grey-600': $phosphor-green,
-  'grey-500': #202124,
-  'grey-400': #202124,
-  'grey-350': #202124,
-  'grey-300': #202124,
-  'grey-200': #202124,
-  'grey-150': #202124,
-  'grey-100': #202124,
-  'grey-75': #202124,
-  'grey-50': #202124,
+  'grey-500': $phosphor-gray,
+  'grey-400': $phosphor-gray,
+  'grey-350': $phosphor-gray,
+  'grey-300': $phosphor-gray,
+  'grey-200': $phosphor-gray,
+  'grey-150': $phosphor-gray,
+  'grey-100': $phosphor-gray,
+  'grey-75': $phosphor-gray,
+  'grey-50': $phosphor-gray,
   'orange-900': $phosphor-green,
   'orange-800': $phosphor-green,
   'orange-700': $phosphor-green,
