--- a/site/_layouts/article.njk
+++ b/site/_layouts/article.njk
@@ -5,7 +5,7 @@ layout: _wrapper
 {% from 'skip-link.njk' import skipLink %} {% from 'article-footer.njk' import articleFooter %} {% from 'authors-list.njk' import authorsList %} {% from 'back-to-top.njk' import backToTop %} {% from 'item-grid.njk' import itemGrid %} {% from 'date-time.njk' import dateTime %} {% from 'toc.njk' import toc as tableOfContents %} {% from 'hero-article.njk' import heroArticle %}
 
 <article class="article">
-  <div class="article__hero">{{skipLink(microcopy.skip.content, 'article')}} {% if section == 'posts' %} {{ heroArticle(section, locale, parent, microcopy, tags[0], title) }} {% elif section == 'case-studies' %} {{ heroArticle(section, locale, parent, microcopy, tags[0], title, app) }} {% endif %}</div>
+  <div class="article__hero">{{skipLink(microcopy.skip.content, 'article')}} {{ heroArticle(section, locale, parent, microcopy, tags[1], title, app) }}</div>
   {% if section == 'case-studies' %}
   <div class="wrapper--padded wrapper--full-bleed article__hero-image-wrapper">
     <img class="article__hero-image" src="{{hero.image}}" alt="{{hero.alt}}" />
