Pull theme and hero into post hero
Theme will also override eyebrow and icon in cards

Hero gets overlaid on top of background for hero and featured items

--- a/site/_components/hero-article.njk
+++ b/site/_components/hero-article.njk
@@ -7,10 +7,22 @@
   @param {object} microcopy: Object with some additional text for the back link.
   @param {string} tag: String representing the eyebrow.
   @param {string} title: String representing the title.
+  @param {object} hero: Article hero
+  @param {object} theme: Article theme
   @param {object} app: Object representing the app.
  #}-->
-{% from 'icon.njk' import icon %} {% from 'app-info.njk' import appInfo %} {% macro heroArticle(section, locale, parent, microcopy, tag, title, app={}) -%} {% set tagSlug = tag | normalizeTag | slugify %}
-<article class="hero-article {% if section == 'posts' %}background-color--{{tagSlug}}{% elif section == 'case-studies' %}hero-article__stories hero-article__stories--background-color{% endif %}">
+{% from 'icon.njk' import icon %} {% from 'app-info.njk' import appInfo %} {% macro heroArticle(section, locale, parent, microcopy, tag, title, hero={}, theme={}, app={}) -%} {% set tagSlug = tag | normalizeTag | slugify %}
+<article
+  class="hero-article {% if section == 'posts' %}
+  {% if theme and theme.theme %}
+    hero--theme__{{theme.theme}}
+  {% else %}
+    background-color--{{tagSlug}}
+  {% endif %}
+{% elif section == 'case-studies' %}
+  hero-article__stories hero-article__stories--background-color
+{% endif %}"
+>
   {% if parent %}
   <div class="wrapper--padded hero-article__back">
     <a class="cta cta--back" href="/{{locale.code}}/{{ parent.url }}">{{ microcopy.breadcrumbs.replace('((t))', parent.title) }}</a>
@@ -18,9 +30,13 @@
   {% endif %}
   <div class="wrapper--padded hero-article__content {% if section == 'case-studies' %}hero-article__stories--content{% endif %}">
     <div class="hero-article__content-wrapper">
-      {% if tag %} {% if section == 'posts' %}{{icon(tagSlug, 'hero-article__icon')}}{% endif %}
+      {% if section == 'posts' %} {% if theme and theme.icon %}
+      <img src="{{theme.icon}}" alt="" class="article__icon icon" aria-hidden="true" />
+      {% elif tag %} {{icon(tagSlug, 'hero-article__icon')}} {% endif %} {% if theme.eyebrow %}
+      <small class="hero-article__eyebrow type--eyebrow">{{theme.eyebrow}}</small>
+      {% else %}
       <small class="hero-article__eyebrow type--eyebrow">{{tag}}</small>
-      {% endif %}
+      {% endif %} {% endif %}
       <h1 class="hero-article__title type--h1">{{title}}</h1>
     </div>
     {% if section == 'case-studies' %}
@@ -30,7 +46,13 @@
   </div>
 
   <div class="hero-article__images">
+    {% if section === 'posts' and hero.image %}
+    <img class="hero-article__images--hero" src="{{hero.image}}" alt="{{hero.alt}}" />
+    {% endif %} {% if theme.background %}
+    <img class="hero-article__images--background-pattern" src="{{theme.background}}" alt="" />
+    {% else %}
     <img class="hero-article__images--background-pattern" src="ix://landings/{{ parent.url }}/banner-{{tagSlug}}.svg" alt="" />
+    {% endif %}
   </div>
 </article>
 {%- endmacro %}
