--- a/site/sass/components/_date-time.scss
+++ b/site/sass/components/_date-time.scss
@@ -9,6 +9,10 @@
     margin-bottom: 0.5rem;
   }
 
+  &--inline {
+    margin-bottom: 0;
+  }
+
   &--inline & {
     &__label {
       display: inline;
