--- a/site/_components/hero-article.njk
+++ b/site/_components/hero-article.njk
@@ -48,8 +48,18 @@
   <div class="hero-article__images">
     {% if section === 'posts' and hero.image %}
     <img class="hero-article__images--hero" src="{{hero.image}}" alt="{{hero.alt}}" />
-    {% endif %} {% if theme.background %}
+    {% endif %} {% if theme.background %} {% if theme.background.top %}
+    <picture>
+      <source media="(min-width: 750px)" srcset="{{theme.background.top}}" />
+      <img class="hero-article__images--background-pattern" src="{{theme.background.bottom}}" alt="" />
+    </picture>
+    {% else %}
     <img class="hero-article__images--background-pattern" src="{{theme.background}}" alt="" />
+    {% endif %} {% elif section == 'posts' %}
+    <picture>
+      <source media="(min-width: 750px)" srcset="ix://landings/{{ parent.url }}/top/banner-{{tagSlug}}.svg" />
+      <img class="hero-article__images--background-pattern" src="ix://landings/{{ parent.url }}/banner-{{tagSlug}}.svg" alt="" />
+    </picture>
     {% else %}
     <img class="hero-article__images--background-pattern" src="ix://landings/{{ parent.url }}/banner-{{tagSlug}}.svg" alt="" />
     {% endif %}
