--- a/site/_components/hero.njk
+++ b/site/_components/hero.njk
@@ -28,10 +28,18 @@
   </div>
   <div class="hero__images">
     <img class="hero__images--image" src="{{content.media.image}}" alt="{{content.media.alt}}" />
-    {% if content.theme.background %}
-    <img class="hero__images--background-pattern" src="{{content.theme.background}}" alt="" />
+    {% if content.theme.background %} {% if content.theme.background.top %}
+    <picture>
+      <source media="(min-width: 1107px)" srcset="{{content.theme.background.top}}" />
+      <img class="hero__images--background-pattern" src="{{content.theme.background.bottom}}" alt="" />
+    </picture>
     {% else %}
-    <img class="hero__images--background-pattern" src="ix://landings/news/banner-{{tagSlug}}.svg" alt="" />
+    <img class="hero__images--background-pattern" src="{{content.theme.background}}" alt="" />
+    {% endif %} {% else %}
+    <picture>
+      <source media="(min-width: 1107px)" srcset="ix://landings/news/top/banner-{{tagSlug}}.svg" />
+      <img class="hero-article__images--background-pattern" src="ix://landings/news/banner-{{tagSlug}}.svg" alt="" />
+    </picture>
     {% endif %}
   </div>
 </article>
