🆕(site) Add New Theme Feature phosphor (#377)
* init Phosphor theme branching

* init Phosphor theme files

* re-init Phosphor method

* re-factor colors for poc

* phosphor var name

* phosphor learning/examples

* phosphor theme

* phosphor class wrapper

* body color fix

* hotfix: phosphor theme declaration (#371)

* small tweaks to nav and ctas

* pretty CRT effects. TODO: sticky position on psuedo ::before on body to fix scanline effect cutoff

* minify css

* hero updates

* homepage styling updates + removing animations + Global style fixes when phosphorus theme is off

* remove phos theme from wrapper

* phosphor theme refactor

* phosphor theme header revert to no spacing for simplicity, icons filter invert

Co-authored-by: Tim Spinks <tspinks@basicagency.com>
Co-authored-by: Tim Spinks <tim.spinks@deptagency.com>
Co-authored-by: Sam Richard <snugug@google.com>

--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -101,3 +101,6 @@
 @import 'layouts/article';
 @import 'layouts/style-guide';
 @import 'layouts/thank-you';
+
+// Phosphor Theme
+@import 'themes/phosphor/style';
