Small tweaks to Phosphor
Adding missing components, making sure text is readable, filling inline SVGs

--- a/site/sass/themes/phosphor/components/_subnav.scss
+++ b/site/sass/themes/phosphor/components/_subnav.scss
@@ -2,7 +2,7 @@
 .subnav {
   &--expand {
     @include mq($bkpt-tech-details--2-cols) {
-      filter: invert(1);
+      fill: var(--phosphor-green);
     }
   }
 
