--- a/site/sass/themes/phosphor/globals/_colors.scss
+++ b/site/sass/themes/phosphor/globals/_colors.scss
@@ -1,11 +1,21 @@
 $phosphor-green: #33ff00;
+$phosphor-green-light: #80db7a;
+$phosphor-green-medium: #4bad4b;
+$phosphor-green-dark: #1a7236;
 $phosphor-gray: #202124;
+$phosphor-white: #ffffff;
 
 $phosphor-colors: (
+  'phosphor-green': $phosphor-green,
+  'phosphor-gray': $phosphor-gray,
+  'phosphor-white': $phosphor-white,
+  'phosphor-green-light': $phosphor-green-light,
+  'phosphor-green-medium': $phosphor-green-medium,
+  'phosphor-green-dark': $phosphor-green-dark,
   'blue-850': $phosphor-green,
   'blue-800': $phosphor-green,
   'blue-700': $phosphor-green,
-  'blue-650': #1a7236,
+  'blue-650': $phosphor-green-dark,
   'blue-600': $phosphor-green,
   'blue-500': $phosphor-green,
   'blue-400': $phosphor-green,
@@ -14,12 +24,13 @@ $phosphor-colors: (
   'blue-200': $phosphor-green,
   'blue-100': $phosphor-green,
   'blue-50': $phosphor-green,
+  'blue-30': $phosphor-green,
   'blue-25': $phosphor-green,
   'red-900': $phosphor-green,
   'red-800': $phosphor-green,
   'red-750': $phosphor-green,
   'red-700': $phosphor-green,
-  'red-650': #80db7a,
+  'red-650': $phosphor-green-light,
   'red-600': $phosphor-green,
   'red-500': $phosphor-green,
   'red-400': $phosphor-green,
@@ -28,18 +39,21 @@ $phosphor-colors: (
   'red-250': $phosphor-green,
   'red-100': $phosphor-green,
   'red-50': $phosphor-green,
+  'red-25': $phosphor-green,
   'yellow-900': $phosphor-green,
   'yellow-800': $phosphor-green,
   'yellow-750': $phosphor-green,
   'yellow-700': $phosphor-green,
   'yellow-600': $phosphor-green,
   'yellow-500': $phosphor-green,
-  'yellow-450': #4bad4b,
+  'yellow-450': $phosphor-green-medium,
   'yellow-400': $phosphor-green,
   'yellow-300': $phosphor-green,
   'yellow-250': $phosphor-green,
   'yellow-200': $phosphor-green,
   'yellow-100': $phosphor-green,
+  'yellow-80': $phosphor-green,
+  'yellow-75': $phosphor-green,
   'yellow-50': $phosphor-green,
   'green-900': $phosphor-green,
   'green-850': $phosphor-green,
@@ -54,6 +68,7 @@ $phosphor-colors: (
   'green-200': $phosphor-green,
   'green-100': $phosphor-green,
   'green-50': $phosphor-green,
+  'green-25': $phosphor-green,
   'grey-1000': $phosphor-green,
   'grey-900': $phosphor-green,
   'grey-850': $phosphor-green,
@@ -90,6 +105,7 @@ $phosphor-colors: (
   'pink-200': $phosphor-green,
   'pink-100': $phosphor-green,
   'pink-50': $phosphor-green,
+  'pink-25': $phosphor-green,
   'purple-900': $phosphor-green,
   'purple-800': $phosphor-green,
   'purple-700': $phosphor-green,
@@ -99,6 +115,7 @@ $phosphor-colors: (
   'purple-300': $phosphor-green,
   'purple-200': $phosphor-green,
   'purple-100': $phosphor-green,
+  'purple-75': $phosphor-green,
   'purple-50': $phosphor-green,
   'cyan-900': $phosphor-green,
   'cyan-800': $phosphor-green,
