--- a/site/sass/themes/phosphor/style.scss
+++ b/site/sass/themes/phosphor/style.scss
@@ -19,7 +19,8 @@
   @import './components/banner-interstitial';
   @import './components/card-study';
   @import './components/footnotes';
-
+  @import './components/background-color';
+  @import './components/toc';
   @import './components/type';
   @import './components/cta';
 }
